--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,68 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  color: aquamarine;
+  color: rgb(51, 63, 224);
+}
+
+html {
+  box-sizing: border-box;
+  background-color: #fff;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+body {
+  margin: 0;
+  min-height: 100vh;
+  color: aliceblue;
+  background-color: #1a1a1a;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+nav li {
+  display: inline-block;
+  padding: 0 10px;
+  justify-content: space-around;
+  color: #577cea;
+  font-size: 1.2rem;
+}
+
+nav li:hover {
+  color: #cdcdcd;
+  transform: scale(1.1);
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 30%;
+  background-color: rgba(213, 209, 209, 0.2);
+  border-radius: 10px;
+  margin-bottom: 2rem;
+}
+
+.item:hover {
+  transform: scale(1.01);
+  cursor: pointer;
+}
+
+.item img {
+  width: 100%;
 }
 
 .logo {
