--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,16 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  color: rgb(51, 63, 224);
-}
-
 html {
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: #a198f4;
   font-size: 16px;
   letter-spacing: 1px;
 }
 body {
   margin: 0;
   min-height: 100vh;
-  color: aliceblue;
-  background-color: #1a1a1a;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(154, 175, 244);
+  background-color: #060c2a;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .header {
@@ -26,6 +18,13 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 2.5rem;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
 }
 
 nav {
@@ -38,7 +37,7 @@ nav li {
   display: inline-block;
   padding: 0 10px;
   justify-content: space-around;
-  color: #577cea;
+  color: #6183e9;
   font-size: 1.2rem;
 }
 
@@ -47,24 +46,36 @@ nav li:hover {
   transform: scale(1.1);
 }
 
-.item {
+.articles-container {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  flex-wrap: wrap;
+}
+
+.article {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   width: 30%;
-  background-color: rgba(213, 209, 209, 0.2);
+  background-color: rgba(83, 75, 139, 0.604);
   border-radius: 10px;
-  margin-bottom: 2rem;
+  margin-left: 1%;
+  margin-right: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
 }
 
-.item:hover {
-  transform: scale(1.01);
+.articles-title {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.article:hover {
+  transform: scale(1.03);
   cursor: pointer;
-}
-
-.item img {
-  width: 100%;
+  filter: drop-shadow(0 0 1em #646cffaa);
 }
 
 .logo {
@@ -75,9 +86,6 @@ nav li:hover {
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
