--- a/src/App.css
+++ b/src/App.css
@@ -18,19 +18,32 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 2.5rem;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .footer {
+  width: 100%;
+  height: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1rem;
+  bottom: 0;
+  position: absolute;
+  color: #00041a;
+  background-color: #7a8deb54;
 }
 
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding-top: 70px;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 nav li {
@@ -44,6 +57,7 @@ nav li {
 nav li:hover {
   color: #cdcdcd;
   transform: scale(1.1);
+  filter: drop-shadow(0 0 2em #7175cdaa);
 }
 
 .articles-container {
@@ -51,9 +65,12 @@ nav li:hover {
   justify-content: space-around;
   align-content: center;
   flex-wrap: wrap;
+  padding: 5px 5px;
+  position: absolute;
+  top: 20rem;
 }
 
-.article {
+.article-card {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -72,10 +89,15 @@ nav li:hover {
   text-align: center;
 }
 
-.article:hover {
+.article-card:hover {
   transform: scale(1.03);
   cursor: pointer;
   filter: drop-shadow(0 0 1em #646cffaa);
+}
+
+.article-image {
+  max-width: 30%;
+  justify-content: center;
 }
 
 .logo {
