--- a/src/App.css
+++ b/src/App.css
@@ -95,9 +95,13 @@ nav li:hover {
   filter: drop-shadow(0 0 1em #646cffaa);
 }
 
+.article-card-image {
+  max-width: 100%;
+  max-height: 15rem;
+}
+
 .article-image {
   max-width: 30%;
-  justify-content: center;
 }
 
 .logo {
