--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,20 @@ body {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
+button {
+  color: #1c3377;
+}
+
+button:hover {
+  background-color: #6671a7;
+  box-shadow: 0 0 5px rgba(61, 128, 139, 0.567);
+  filter: drop-shadow(0 0 1em #646cffaa);
+}
+
+.open-comments-button {
+  color: #1c3377;
+  background-color: rgb(184, 186, 235);
+}
 .header {
   display: flex;
   justify-content: center;
@@ -102,6 +116,13 @@ nav li:hover {
 
 .article-image {
   max-width: 30%;
+}
+
+.single-article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
