--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ button:hover {
   align-items: center;
   font-size: 1rem;
   bottom: 0;
-  position: absolute;
+  position: sticky;
   color: #00041a;
   background-color: #7a8deb54;
 }
@@ -100,8 +100,18 @@ nav li:hover {
 }
 
 .articles-title {
+  top: -15rem;
   font-size: 2rem;
   text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #3c4fad;
+  color: #fff;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .article-card:hover {
