--- a/src/components/ArticleCard.css
+++ b/src/components/ArticleCard.css
@@ -5,6 +5,7 @@
   background-color: rgba(83, 75, 139, 0.604);
   border-radius: 10px;
   margin: 1rem;
+  margin-top: 2rem;
   padding: 1rem;
   transition: transform 0.3s;
 }
